--- a/index.html
+++ b/index.html
@@ -112,8 +112,18 @@
                   <span class="icon">
                       <i class="far fa-images"></i>
                   </span>
-                  <span>Data</span>
+                  <span>Dataset</span>
                   </a>
+              </span>
+              <span class="link-block">
+                <a href="https://github.com/google/nerfies/releases/tag/0.1"
+                   class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                      <i class="far fa-images"></i>
+                  </span>
+                  <span>Demo</span>
+                  </a>
+              </span>
             </div>
 
           </div>
@@ -126,7 +136,7 @@
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
-        <iframe src="./static/images/teaser.pdf" width="600" height="400"></iframe>
+        <img src="./static/images/teaser.jpg" alt="Description of image" class="my-image">
       <h2 class="subtitle has-text-centered">
         <span class="dnerf"></span> Illustrative instances of caption generation produced
         by our pipeline
@@ -166,6 +176,67 @@
     <!--/ Abstract. -->
   </div>
 </section>
+
+<!-- Start of new Table section -->
+<section class="section" id="Table">
+    <div class="container is-max-desktop content">
+      <h2 class="title is-3">Audibility Dataset</h2>
+      <p>Examples from the GPT-4 generated dataset comprising both audible and inaudible sentences. We prompted ChatGPT
+        with the task of creating examples for a classifier that distinguishes between these two categories.</p>
+      <table>
+        <thead>
+          <tr>
+            <th>Audible</th>
+            <th>Not-Audible</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>The barking of a dog in excitement.</td>
+            <td>Magnets attract metals.</td>
+          </tr>
+          <tr>
+            <td>Ringing phone awaits an answer.</td>
+            <td>Ice covers the lake in winter.</td>
+          </tr>
+          <tr>
+            <td>The buzz of a drone flying overhead.</td>
+            <td>Icebergs float on water.</td>
+          </tr>
+          <tr>
+            <td>Birds chirping in early morning.</td>
+            <td>An umbrella stands closed by the door.</td>
+          </tr>
+          <tr>
+            <td>Jingling coins are counted or played with.</td>
+            <td>A statue in a park.</td>
+          </tr>
+          <tr>
+            <td>The swishing sound of a washing machine.</td>
+            <td>Rusting car sits in the yard.</td>
+          </tr>
+          <tr>
+            <td>Whips cracked in the rodeo.</td>
+            <td>Resolved issue is fixed.</td>
+          </tr>
+          <tr>
+            <td>The meow of a cat.</td>
+            <td>Soccer balls are stored in a mesh bag.</td>
+          </tr>
+          <tr>
+            <td>The school bell rings, signaling the end of class.</td>
+            <td>kimmed milk has less fat.</td>
+          </tr>
+          <tr>
+            <td>Raindrops tapping on rooftops.</td>
+            <td>A pair of hiking boots rests next to a backpack.</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </section>
+  <!-- End of new Table section -->
+  
 
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
