changed-index.html

--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
           <h1 class="title is-1 publication-title">Zero-Shot Audio Captioning via Audibility Guidance</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="https://keunhong.com">Tal Shaharabany</a><sup></sup>,</span>
+              <a href="https://scholar.google.com/citations?hl=en&user=SyA5pnoAAAAJ">Tal Shaharabany</a><sup></sup>,</span>
             <span class="author-block">
               <a href="https://utkarshsinha.com">Ariel Shaulov</a><sup></sup>,</span>
             <span class="author-block">
-              <a href="https://jonbarron.info">Lior Wolf</a><sup></sup>
+              <a href="http://www.cs.tau.ac.il/~wolf/">Lior Wolf</a><sup></sup>
             </span>
           </div>
 
