changed-index.html

--- a/index.html
+++ b/index.html
@@ -156,65 +156,70 @@
   </div>
 </section>
 
-<!-- Start of new Table section -->
+  <!-- Start of new Table section -->
 <section class="section" id="Table">
-    <div class="container is-max-desktop content">
-      <h2 class="title is-3">Audibility Dataset</h2>
-      <p>Examples from the GPT-4 generated dataset comprising both audible and inaudible sentences. We prompted ChatGPT
-        with the task of creating examples for a classifier that distinguishes between these two categories.</p>
-      <table>
-        <thead>
-          <tr>
-            <th>Audible</th>
-            <th>Not-Audible</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>The barking of a dog in excitement.</td>
-            <td>Magnets attract metals.</td>
-          </tr>
-          <tr>
-            <td>Ringing phone awaits an answer.</td>
-            <td>Ice covers the lake in winter.</td>
-          </tr>
-          <tr>
-            <td>The buzz of a drone flying overhead.</td>
-            <td>Icebergs float on water.</td>
-          </tr>
-          <tr>
-            <td>Birds chirping in early morning.</td>
-            <td>An umbrella stands closed by the door.</td>
-          </tr>
-          <tr>
-            <td>Jingling coins are counted or played with.</td>
-            <td>A statue in a park.</td>
-          </tr>
-          <tr>
-            <td>The swishing sound of a washing machine.</td>
-            <td>Rusting car sits in the yard.</td>
-          </tr>
-          <tr>
-            <td>Whips cracked in the rodeo.</td>
-            <td>Resolved issue is fixed.</td>
-          </tr>
-          <tr>
-            <td>The meow of a cat.</td>
-            <td>Soccer balls are stored in a mesh bag.</td>
-          </tr>
-          <tr>
-            <td>The school bell rings, signaling the end of class.</td>
-            <td>kimmed milk has less fat.</td>
-          </tr>
-          <tr>
-            <td>Raindrops tapping on rooftops.</td>
-            <td>A pair of hiking boots rests next to a backpack.</td>
-          </tr>
-        </tbody>
-      </table>
+    <div class="container is-max-desktop">
+      <div class="columns is-centered has-text-centered">
+        <div class="column is-four-fifths">
+          <h2 class="title is-3 has-text-centered">Audibility Dataset</h2>
+          <p style="margin-bottom: 20px;">Examples from the GPT-4 generated dataset comprising both audible and inaudible sentences. We prompted ChatGPT
+            with the task of creating examples for a classifier that distinguishes between these two categories.</p>
+            <table>
+                <thead>
+                  <tr>
+                    <th>Audible</th>
+                    <th>Not-Audible</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>The barking of a dog in excitement.</td>
+                    <td>Magnets attract metals.</td>
+                  </tr>
+                  <tr>
+                    <td>Ringing phone awaits an answer.</td>
+                    <td>Ice covers the lake in winter.</td>
+                  </tr>
+                  <tr>
+                    <td>The buzz of a drone flying overhead.</td>
+                    <td>Icebergs float on water.</td>
+                  </tr>
+                  <tr>
+                    <td>Birds chirping in early morning.</td>
+                    <td>An umbrella stands closed by the door.</td>
+                  </tr>
+                  <tr>
+                    <td>Jingling coins are counted or played with.</td>
+                    <td>A statue in a park.</td>
+                  </tr>
+                  <tr>
+                    <td>The swishing sound of a washing machine.</td>
+                    <td>Rusting car sits in the yard.</td>
+                  </tr>
+                  <tr>
+                    <td>Whips cracked in the rodeo.</td>
+                    <td>Resolved issue is fixed.</td>
+                  </tr>
+                  <tr>
+                    <td>The meow of a cat.</td>
+                    <td>Soccer balls are stored in a mesh bag.</td>
+                  </tr>
+                  <tr>
+                    <td>The school bell rings, signaling the end of class.</td>
+                    <td>Skimmed milk has less fat.</td>
+                  </tr>
+                  <tr>
+                    <td>Raindrops tapping on rooftops.</td>
+                    <td>A pair of hiking boots rests next to a backpack.</td>
+                  </tr>
+                </tbody>
+              </table>
+        </div>
+      </div>
     </div>
   </section>
   <!-- End of new Table section -->
+
   
 
 <section class="section" id="BibTeX">
@@ -233,11 +238,7 @@
 <footer class="footer">
   <div class="container">
     <div class="content has-text-centered">
-      <a class="icon-link"
-         href="./static/videos/nerfies_paper.pdf">
-        <i class="fas fa-file-pdf"></i>
-      </a>
-      <a class="icon-link" href="https://github.com/keunhong" class="external-link" disabled>
+      <a class="icon-link" href="https://github.com/arielshaulov" class="external-link" disabled>
         <i class="fab fa-github"></i>
       </a>
     </div>
