changed-index.html

--- a/index.html
+++ b/index.html
@@ -225,6 +225,8 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
+    <p>If you find this project useful for your research, please cite the following:
+    </p>
     <pre><code>@article{shaharabany2023zero,
         title={Zero-Shot Audio Captioning via Audibility Guidance},
         author={Shaharabany, Tal and Shaulov, Ariel and Wolf, Lior},
