changed-index.html

--- a/index.html
+++ b/index.html
@@ -240,6 +240,9 @@
 <footer class="footer">
   <div class="container">
     <div class="content has-text-centered">
+      <a class="icon-link" href="https://github.com/talshaharabany" class="external-link" disabled>
+            <i class="fab fa-github"></i>
+      </a>
       <a class="icon-link" href="https://github.com/arielshaulov" class="external-link" disabled>
         <i class="fab fa-github"></i>
       </a>
