--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <span class="author-block">
               <a href="https://scholar.google.com/citations?hl=en&user=SyA5pnoAAAAJ">Tal Shaharabany</a><sup></sup>,</span>
             <span class="author-block">
-              <a href="https://utkarshsinha.com">Ariel Shaulov</a><sup></sup>,</span>
+              <a href="">Ariel Shaulov</a><sup></sup>,</span>
             <span class="author-block">
               <a href="http://www.cs.tau.ac.il/~wolf/">Lior Wolf</a><sup></sup>
             </span>
@@ -76,7 +76,7 @@
               </span>
               <!-- Code Link. -->
               <span class="link-block">
-                <a href="https://github.com/google/nerfies"
+                <a href="https://github.com/arielshaulov/zero-shot-audio-captioning/tree/main"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
@@ -86,7 +86,7 @@
               </span>
               <!-- Dataset Link. -->
               <span class="link-block">
-                <a href="https://github.com/google/nerfies/releases/tag/0.1"
+                <a href="https://github.com/arielshaulov/zero-shot-audio-captioning/tree/main/audibility-dataset"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="far fa-images"></i>
@@ -95,7 +95,7 @@
                   </a>
               </span>
               <span class="link-block">
-                <a href="https://github.com/google/nerfies/releases/tag/0.1"
+                <a href="https://github.com/arielshaulov/zero-shot-audio-captioning/tree/main"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="far fa-images"></i>
