--- a/index.html
+++ b/index.html
@@ -256,7 +256,13 @@
             Commons Attribution-ShareAlike 4.0 International License</a>.
           </p>
           <p>
-            Website source code based on the Nerfies project page. If you want to reuse their source code, please credit them appropriately.
+            Website source code based on the
+            <a rel="Nerfies"
+               href="https://nerfies.github.io/">Nerfies</a>
+             project page. If you want to reuse their
+             <a rel="source code"
+               href="https://github.com/nerfies/nerfies.github.io">source code</a>,
+               please credit them appropriately.
           </p>
         </div>
       </div>
