--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <span class="author-block">
               <a href="https://scholar.google.com/citations?hl=en&user=SyA5pnoAAAAJ">Tal Shaharabany</a><sup></sup>,</span>
             <span class="author-block">
-              <a href="">Ariel Shaulov</a><sup></sup>,</span>
+              <a href="https://scholar.google.com/citations?hl=en&user=A31XmP0AAAAJ">Ariel Shaulov</a><sup></sup>,</span>
             <span class="author-block">
               <a href="http://www.cs.tau.ac.il/~wolf/">Lior Wolf</a><sup></sup>
             </span>
